# rgetd

./: CODE_OF_CONDUCT.md  Cargo.toml  README.md  build_release.sh
.github/workflows/: build.yml
src/: args.rs  config.rs  download.rs  main.rs
