[package]
name = "rgetd"
version = "1.5.1"
authors = ["Mateusz Czarnecki (DemwE)"]
description = "A simple CLI tool for downloading files from the internet."
repository = "https://github.com/DemwE/rgetd"
license = "GPL-3.0"
readme = "README.md"
categories = ["command-line-utilities"]
edition = "2021"

[dependencies]
clap = {version = "4.4.8", features = ["derive"]}
colorful = "0.2.2"
directories = "5.0.1"
indicatif = {version = "0.17.5", features = ["improved_unicode", "unicode-segmentation"]}
reqwest = {version = "0.11.18", features = ["blocking", "json", "stream"]}
toml = "0.8.8"
log = "0.4.20"
env_logger = "0.10.1"
tokio = {version = "1.34.0" , features = ["full"]}
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
dirs = "5.0.1"
url = "2.4.1"
